backend-flask/envoy.yaml
# envoy.yaml file
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/secret"
                          route:
                            cluster: backend-flask
                            timeout: 10s
                            retry_policy:
                              retry_on: connection-failure
                              num_retries: 3
                              per_try_timeout: 5s
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        provider_0:
                          issuer: "http://flask-backend:5000/"
                          local_jwks:
                            inline_string: |
                              {
                                "keys": [
                                  {
                                    "alg": "HS256",
                                    "kty": "oct",
                                    "kid": "key-id-0",
                                    "use": "sig",
                                    "key_ops": [
                                      "verify"
                                    ],
                                    "k": "super-secret"
                                  }
                                ]
                              }
                      rules:
                        - match:
                            path: "/secret"
                          requires:
                            provider
